fixed footer spacing

--- a/bakeit/public/stylesheets/style.css
+++ b/bakeit/public/stylesheets/style.css
@@ -1,13 +1,17 @@
+
+/*------------------- General Site Styling -------------------*/
+
 body {
   margin: auto;
   width: 100%;
   font-family: 'Nunito', sans-serif;
+  padding-bottom: 100px;
 }
 
 #container {
   width: 60%;
   margin: auto;
-  margin-top: 10%;
+  margin-top: 2.5%;
 }
 
 input {
@@ -42,17 +46,6 @@ hr {
   cursor: none;
 }
 
-#footer {
-  text-align: center;
-  margin-bottom: 0;
-  background-color: #4dd0e1;
-  color: white;
-  font-size: 16px;
-  padding: 6px;
-  border: 6px solid #4dd0e1;
-  border-radius: 5px;
-}
-
 /*------------------- Navbar -------------------*/
 
 .navbar {
@@ -62,7 +55,7 @@ hr {
 
 .nav-text {
   color: #e0f7fa !important;
-  font-size: 16px;
+  font-size: 20px;
 }
 
 .nav-text:hover, .nav-text:active {
